# proyecto5-grupo5

./: .gitignore  .jupytext.toml  Makefile  README.md  main.py  pyproject.toml
api/: database.py  main.py  preprocessing.py  schemas.py
data/processed/: telco_clean.parquet  telco_ml.parquet  telco_ml_scaled.parquet
frontend/: .env.example  .env.prod.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  mock.ts  predict.ts
frontend/src/components/: FormField.tsx  FormSection.tsx  LanguageToggle.tsx  PredictionResult.tsx  ThemeToggle.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/data/: fields.ts
frontend/src/hooks/: usePredictForm.ts
frontend/src/i18n/: en.ts  es.ts  index.tsx  types.ts
frontend/src/lib/: logger.ts
frontend/src/pages/: PredictPage.tsx
frontend/src/types/: api.ts  ui.ts
notebooks/: 01_eda.py  02_feature_engineering.py  02_logistic_regression.py  03_modeling_baseline_lr.py  03_random_forest.py  04_knn.py  04_modeling_random_forest.py  05_modeling_knn.py  05_xgboost.py  06_shap_global.py  07_shap_local.py  eda.py
src/: config.py  data.py  eda.py  encoding.py  evaluation.py  features.py  pipelines.py  preprocessing.py  shap_config.py  shap_explainer.py  shap_utils.py  train.py  training.py  utils.py
