[project]
name = "proyecto5-grupo5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "jupyter>=1.1.1",
    "jupytext>=1.19.4",
    "numpy>=2.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "scikit-learn>=1.7",
    "sweetviz>=2.3.3",
    "openpyxl>=3.1.5",
    "seaborn>=0.13.2",
    "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
    "ruff>=0.15.20",
]
