[project]
name = "proyecto5-grupo5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "jupyter>=1.1.1",
    "jupytext>=1.19.4",
    "numpy>=2.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "scikit-learn>=1.7",
    "sweetviz>=2.3.3",
    "openpyxl>=3.1.5",
    "seaborn>=0.13.2",
    "pyarrow>=24.0.0",
    "xgboost>=3.3.0",
    "optuna>=4.9.0",
    "joblib>=1.5.3",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "psycopg2-binary>=2.9",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Setting the shape on a NumPy array has been deprecated:DeprecationWarning",
]

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.setuptools.package-dir]
"" = "."

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
    "ruff>=0.15.20",
]
